* VMCache::Resize(): Corrected TODO comment. * Changed the semantics of VMCache::HasPage(). It was interpreted   inconsistently by the derived classes. Now it returns whether the backing   store can provide the page (via Read()). The default implementation returns   false. VNodeCache::HasPage() only returns true, if the given offset is   within the cache (i.e. file) bounds. This prevents vm_soft_fault() from   adding clean pages to vnode caches on faults beyond the file bounds.   Probably fixes #5473 -- at least mmap_resize_test behaves correctly, now. * Removed redundant HasPage() and Fault() overrides in VMCache derived   classes.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36374 a95241bf-73f2-0310-859d-f6bbb57e9c96