src/system/kernel/vm/VMDeviceCache.h
@@ -17,15 +17,10 @@ class VMDeviceCache : public VMCache {
 public:
 			status_t	Init(addr_t baseAddress, uint32 allocationFlags);
 
-	virtual	bool		HasPage(off_t offset);
-
 	virtual	status_t	Read(off_t offset, const iovec *vecs, size_t count,
 							uint32 flags, size_t *_numBytes);
 	virtual	status_t	Write(off_t offset, const iovec *vecs, size_t count,
 							uint32 flags, size_t *_numBytes);
-
-	virtual	status_t			Fault(struct VMAddressSpace* addressSpace,
-									off_t offset);
 
 private:
 	addr_t	fBaseAddress;
