src/system/kernel/vm/VMNullCache.cpp
@@ -3,6 +3,7 @@
  * Distributed under the terms of the MIT License.
  */
 
+
 #include "VMNullCache.h"
 
 
@@ -10,11 +11,4 @@ status_t
 VMNullCache::Init(uint32 allocationFlags)
 {
 	return VMCache::Init(CACHE_TYPE_NULL, allocationFlags);
-}
-
-
-status_t
-VMNullCache::Fault(struct VMAddressSpace* addressSpace, off_t offset)
-{
-	return B_BAD_ADDRESS;
 }
